--- a/personalwebsite/src/components/about/About.module.css
+++ b/personalwebsite/src/components/about/About.module.css
@@ -1,4 +1,5 @@
 .aboutWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -38,7 +39,7 @@
   padding: 1rem 0;
   width: 100%;
   bottom: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 @media screen and (min-width: 768px) {
