--- a/personalwebsite/src/components/works/Works.module.css
+++ b/personalwebsite/src/components/works/Works.module.css
@@ -18,7 +18,6 @@
   font-weight: 500;
   line-height: 1.1;
   margin: 0;
-  padding-block: 0;
   padding-inline: 20px;
 }
 
@@ -39,7 +38,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: center;
   gap: 10px;
   padding: 20px;
@@ -68,18 +66,6 @@
   color: #aaa;
 }
 
-.workDetails a {
-  color: #007bff;
-  text-decoration: none;
-  font-weight: bold;
-  display: inline-block;
-  transition: color 0.3s ease;
-}
-
-.workDetails a:hover {
-  color: #0056b3;
-}
-
 .workImageCon {
   flex: 1;
   padding: 20px;
@@ -91,6 +77,11 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
+}
+
+.previewLinkBtn {
+  width: 80px;
+  border: none;
 }
 
 @media (min-width: 768px) {
